--- a/coolage_packages/packages/college/pubspec.yaml
+++ b/coolage_packages/packages/college/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
     path: ../cards
   user:
     path: ../user
+  feed:
+    path: ../feed
 dev_dependencies:
   flutter_test:
     sdk: flutter
