--- a/coolage/firebase.json
+++ b/coolage/firebase.json
@@ -6,6 +6,9 @@
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
-    ]
+    ],
+    "appAssociation": "AUTO",
+    "rewrites": [ { "source": "/blogs/**", "dynamicLinks": true },
+       { "source": "/feed/**", "dynamicLinks": true } ]
   }
 }
