--- a/coolage_packages/packages/blogs/pubspec.yaml
+++ b/coolage_packages/packages/blogs/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   # firebase
   firebase_storage: ^8.0.6
   firebase_database: ^6.1.2
+  firebase_dynamic_links: ^4.0.3
+  share: ^2.0.4
   cloud_firestore:
     ^2.1.0
     # packages
