--- a/coolage_packages/packages/feed/pubspec.yaml
+++ b/coolage_packages/packages/feed/pubspec.yaml
@@ -28,7 +28,8 @@ dependencies:
   firebase_storage: ^8.0.6
   firebase_database: ^6.1.2
   cloud_firestore: ^2.1.0
-
+  firebase_dynamic_links: ^4.0.3
+  share: ^2.0.4
   # packages
   core:
     path: ../core
